
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {int version; } ;


 int ARRAY_SIZE (TYPE_1__*) ;
 int EXIT_FAILURE ;
 int KERNEL_VERSION_LENGTH ;
 int dprintf (char*,...) ;
 int exit (int ) ;
 int get_kernel_version (char*,int) ;
 int kernel ;
 TYPE_1__* kernels ;
 scalar_t__ strcmp (char*,int ) ;

void detect_versions() {
 char version[KERNEL_VERSION_LENGTH];

 get_kernel_version(&version[0], KERNEL_VERSION_LENGTH);

 int i;
 for (i = 0; i < ARRAY_SIZE(kernels); i++) {
  if (strcmp(&version[0], kernels[i].version) == 0) {
   dprintf("[.] kernel version '%s' detected\n", kernels[i].version);
   kernel = i;
   return;
  }
 }

 dprintf("[-] kernel version not recognized\n");
 exit(EXIT_FAILURE);
}
